# vag_feo_autonom

temp_monitor/: CMakeLists.txt  Package.xml  README.md  package.xml
temp_monitor/Launch/: launch.py
temp_monitor/src/: temperature_monitor.cpp  temperature_publisher.cpp
